--- a/app/config.env
+++ b/app/config.env
@@ -1,3 +1,6 @@
 POSTGRES_USER=root
 POSTGRES_PASSWORD=123
 POSTGRES_DB=hosting
+
+PGADMIN_DEFAULT_EMAIL=admin@local.com
+PGADMIN_DEFAULT_PASSWORD=123
